force-app/main/default/objects/Reva_Mess_Menu__c/Reva_Mess_Menu__c.object-meta.xml
<CustomObject>
    <description>Reva Mess Menu is used to store the details of the timings, menu items and total bookings.</description>
    <label>REVA Mess Menu</label>
    <nameField>
        <displayFormat>MENU-{0000}</displayFormat>
        <label>REVA Mess Menu Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>REVA Mess Menu</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>