force-app/main/default/objects/Reva_Mess_Menu__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>Today()+1</defaultValue>
    <description>Select the Date which the Menu is being created</description>
    <inlineHelpText>Select the Date which the Menu is being created</inlineHelpText>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>