force-app/main/default/objects/Reva_Mess_Menu__c/fields/Display_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Display_End_Time__c</fullName>
    <formula>End_Time__c - (10 * 60 * 1000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display End Time</label>
    <type>Time</type>
</CustomField>