force-app/main/default/objects/Reva_Mess_Menu__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <inlineHelpText>Select the End time of the meal</inlineHelpText>
    <label>End Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>