force-app/main/default/objects/Reva_Mess_Menu__c/fields/Mess_Items__c.field-meta.xml
<CustomField>
    <fullName>Mess_Items__c</fullName>
    <label>Mess Items</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mess_Menu_Items</valueSetName>
    </valueSet>
</CustomField>