force-app/main/default/objects/Reva_Mess_Menu__c/fields/Reva_Mess__c.field-meta.xml
<CustomField>
    <fullName>Reva_Mess__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>REVA Mess</label>
    <referenceTo>Reva_Mess__c</referenceTo>
    <relationshipName>Reva_Mess_Menu</relationshipName>
    <type>Lookup</type>
</CustomField>