force-app/main/default/objects/Reva_Mess_Menu__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <inlineHelpText>Select the start time of the meal</inlineHelpText>
    <label>Start Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>