force-app/main/default/objects/Reva_Mess_Menu__c/fields/Total_Booking__c.field-meta.xml
<CustomField>
    <fullName>Total_Booking__c</fullName>
    <label>Total Booking</label>
    <summaryForeignKey>Reva_Meal_Booking__c.Reva_Mess_Menu__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>