force-app/main/default/objects/Reva_Mess_Menu__c/validationRules/Menu_Future_Date_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Menu_Future_Date_Restriction</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Date__c)),
    NOT(
        OR(
           Date__c = TODAY(),
           Date__c = TODAY() + 1
        )
    )
)</errorConditionFormula>
    <errorMessage>The date must be either today or tomorrow.</errorMessage>
</ValidationRule>