force-app/main/default/objects/Reva_Mess_Menu__c/validationRules/Start_Time_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Time_Validation</fullName>
    <active>true</active>
    <description>End Time should be greater than Start time</description>
    <errorConditionFormula>Start_Time__c &gt;= End_Time__c</errorConditionFormula>
    <errorMessage>End Time should be greater than Start time</errorMessage>
</ValidationRule>