force-app/main/default/objects/Reva_Mess_Menu__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Date__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Mess_Items__c</columns>
    <columns>Total_Booking__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>